RESOLVED FIXED94153
[BlackBerry] WebPage::executeJavaScriptFunction will crash if there is an exception when compiled in debug
https://bugs.webkit.org/show_bug.cgi?id=94153
Summary [BlackBerry] WebPage::executeJavaScriptFunction will crash if there is an exc...
Benjamin Meyer
Reported 2012-08-15 14:50:24 PDT
Use WebPage::executeJavaScriptFunction to call a valid function that throws an exception.
Attachments
patch (2.08 KB, patch)
2012-08-15 14:55 PDT, Benjamin Meyer
yong.li.webkit: review+
patch (2.09 KB, patch)
2012-08-15 15:06 PDT, Benjamin Meyer
no flags
patch (1.75 KB, patch)
2012-08-15 15:12 PDT, Benjamin Meyer
no flags
Benjamin Meyer
Comment 1 2012-08-15 14:55:48 PDT
Yong Li
Comment 2 2012-08-15 15:02:22 PDT
Comment on attachment 158642 [details] patch R+ with the changelog changed to the same look as other commits.
Benjamin Meyer
Comment 3 2012-08-15 15:06:46 PDT
Created attachment 158644 [details] patch added BLACKBERRY and swapped reviewed by and the url
WebKit Review Bot
Comment 4 2012-08-15 15:08:23 PDT
Attachment 158644 [details] did not pass style-queue: Failed to run "['Tools/Scripts/check-webkit-style', '--diff-files', u'Source/WebKit/blackberry/Api/WebPage.cpp',..." exit_code: 1 Source/WebKit/blackberry/ChangeLog:6: Line contains tab character. [whitespace/tab] [5] Total errors found: 1 in 2 files If any of these errors are false positives, please file a bug against check-webkit-style.
Benjamin Meyer
Comment 5 2012-08-15 15:12:29 PDT
Yong Li
Comment 6 2012-08-15 15:13:52 PDT
Comment on attachment 158645 [details] patch Still different as others. Not sure why prepare-changeLog works differently for you. but OK...
WebKit Review Bot
Comment 7 2012-08-15 16:35:06 PDT
Comment on attachment 158645 [details] patch Clearing flags on attachment: 158645 Committed r125721: <http://trac.webkit.org/changeset/125721>
WebKit Review Bot
Comment 8 2012-08-15 16:35:10 PDT
All reviewed patches have been landed. Closing bug.
Note You need to log in before you can comment on or make changes to this bug.