[BlackBerry] When there is an exception we want to check if the ref is 0, not the value as JSObjectCallAsFunction returns 0 in that case. https://bugs.webkit.org/show_bug.cgi?id=94153

Patch by Benjamin C Meyer <bmeyer@rim.com> on 2012-08-15
Reviewed by Yong Li.

* Api/WebPage.cpp:
(BlackBerry::WebKit::WebPage::executeJavaScriptFunction):

Canonical link: https://commits.webkit.org/111979@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@125721 268f45cc-cd09-0410-ab3c-d52691b4dbfc